postcss/testData/inspections/mediaRanges/incorrectMediaRange.pcss
@media (200px <<error descr="Identifier expected"> </error><= 400px){}